<resources>
    <string name="app_name">SpyroTheDragon</string>
    <string name="worlds">Mundos</string>
    <string name="characters">Personajes</string>
    <string name="collectibles">Coleccionables</string>
    <string name="title_about">Acerca de</string>
    <string name="text_about">Aplicación desarrollada por \n <b>Arabia Camacho Campos.</b></string>
    <string name="accept">Aceptar</string>
    <string name="bienvenidos">BIENVENIDOS</string>
    <string name="subtitulo1">Prepárate para explorar el mundo mágico de esta aplicación inspirada en... </string>
    <string name="subtitulo2">Aquí aprenderás a navegar por pestañas llenas de dragones, mundos fascinantes y montones de tesoros brillantes.</string>
    <string name="subtitulo3">¿Listo para empezar?</string>
    <string name="subtitulo4">Pulsa Comenzar y deja que Spyro te lleve volando a través de esta guia interactiva.</string>
    <string name="tv_bocadillo">¡COMENZEMOS!\n Pulsa para continuar...</string>
    <string name="guia_completada">¡GUÍA COMPLETADA!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="omitir">Omitir</string>
    <string name="easter_egg">¡¡EASTER EGG DESCUBIERTO!!</string>

</resources>