<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="40dp"
    android:background="@drawable/fondo_guia"
    android:gravity="center_horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bienvenidos"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:textStyle="bold"        />
    <View
        android:id="@+id/vLinea"
        android:layout_width="350dp"
        android:layout_height="4dp"
        android:layout_marginBottom="20dp"
        android:background="@color/white"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subtitulo1"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:src="@drawable/logo_spyro"
        android:scaleType="centerCrop"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subtitulo2"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginBottom="20dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subtitulo3"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginBottom="20dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subtitulo4"
        android:textColor="@color/white"
        android:textSize="20sp" />
    <Button
        android:id="@+id/btnStart"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:text="Comenzar"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:layout_marginTop="30dp"/>

</LinearLayout>